# super-dollop

./: CMakeLists.txt  LICENSE  Makefile  README.md  collaboration.txt  compile.c  compile.h  compiler.c  compiler.h  input-output.c  input-output.h  instructions.h  lexer.c  lexer.h  symbol-detection.c  symbol-detection.h  tokens.h
correct/: correct0.pl0  correct0.pm0  correct2.pl0  correct2.pm0  correct3.pl0  correct3.pm0  correct4.pm0  correct5.pl0  stacktrace0.txt  stacktrace1.txt  stacktrace2.txt  stacktrace3.txt  stacktrace4.txt
incorrect/: error0.txt  error1.txt  error2.txt  error3.txt  error4.txt  error5.txt  error6.txt  error7.txt  error8.txt  error9.txt  incorrect1.pl0  incorrect2.pl0  incorrect4.pl0  incorrect6.pl0  incorrect7.pl0  incorrect8.pl0  incorrect9.pl0
lexer/: input_output.c  input_output.h  lexer.c  symbol_detection.c  symbol_detection.h  tokens.h
newtests/: error1.pl0  error10.pl0  error11.pl0  error12.pl0  error13.pl0  error15.pl0  error16.pl0  error17.pl0  error18.pl0  error2.pl0  error22.pl0  error25.pl0  error3.pl0  error4.pl0  error5.pl0  error7.pl0  error8.pl0  error9.pl0
parser/: errordefs.h  parse.c  parse.h  symbols.c  symbols.h
tests/: breaktable.pl0  goodTest.pl0  loop_mult.pl0  test1.pl0  test4.pl0  test5.pl0  test6.pl0  test7.pl0  two_const.pm0  two_var.pl0
virtual_machine/: input_output.c  input_output.h  instructions.c  instructions.h  opcodes.h  util.c  util.h  vm.c  vm.h
wocjan/: out0.pm0  out1.pm0  out2.pm0  out3.pm0  out4.pm0  out5.pm0  out6.pm0  out7.pm0  out8.pm0  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  (+4 more)
